--- a/CoronaMod.csproj
+++ b/CoronaMod.csproj
@@ -48,8 +48,8 @@
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" PrivateAssets="all"/>
         <PackageReference Include="LethalCompany.GameLibs.Steam" Version="*-*" PrivateAssets="all"/>
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" PrivateAssets="all"/>
-    <!--    <PackageReference Include="TeamBMX.LobbyCompatibility" Version="1.*" PrivateAssets="all"/> -->
         <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1" PrivateAssets="all" />
+        <PackageReference Include="Evaisa.LethalLib" Version="0.*" />
     </ItemGroup>
 
     <ItemGroup>
